--- a/ui/admin/client/scripts/pages/system.html
+++ b/ui/admin/client/scripts/pages/system.html
@@ -3,10 +3,10 @@
   <aside>
     <ul>
       <li ng-class="activeClass('section='+systemSettingsProvider.id)"
-          ng-repeat="systemSettingsProvider in systemSettingsProviders"
           show-if-authorized
           auth-permission="{{ (systemSettingsProvider.auth ? systemSettingsProvider.auth.permission : '') }}"
-          auth-resource-name="{{ (systemSettingsProvider.auth ? systemSettingsProvider.auth.resource : '') }}">
+          auth-resource-name="{{ (systemSettingsProvider.auth ? systemSettingsProvider.auth.resource : '') }}"
+          ng-repeat="systemSettingsProvider in systemSettingsProviders">
         <a href="#/system/?section={{systemSettingsProvider.id}}">
           {{systemSettingsProvider.label | translate}}
         </a>
