--- a/ui/admin/client/scripts/pages/system.html
+++ b/ui/admin/client/scripts/pages/system.html
@@ -3,9 +3,7 @@
   <aside>
     <ul>
       <li ng-class="activeClass('section='+systemSettingsProvider.id)"
-          show-if-authorized
-          auth-permission="{{ (systemSettingsProvider.auth ? systemSettingsProvider.auth.permission : '') }}"
-          auth-resource-name="{{ (systemSettingsProvider.auth ? systemSettingsProvider.auth.resource : '') }}"
+          ng-if="isAuthorized()"
           ng-repeat="systemSettingsProvider in systemSettingsProviders">
         <a href="#/system/?section={{systemSettingsProvider.id}}">
           {{systemSettingsProvider.label | translate}}
