--- a/ui/admin/client/scripts/pages/system.html
+++ b/ui/admin/client/scripts/pages/system.html
@@ -3,7 +3,7 @@
   <aside>
     <ul>
       <li ng-class="activeClass('section='+systemSettingsProvider.id)"
-          ng-if="isAuthorized()"
+          ng-if="!!plugin.accessible"
           ng-repeat="systemSettingsProvider in systemSettingsProviders">
         <a href="#/system/?section={{systemSettingsProvider.id}}">
           {{systemSettingsProvider.label | translate}}
